# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cs4212-renderer.code-workspace
examples/: CMakeLists.txt  boost_Timer.cpp  test_Timer.cpp
examples/OpenGL/: glfwExample.cpp
examples/Vulkan/: CMakeLists.txt
glfw-master/: CMakeLists.txt
hardware-renderer/: CMakeLists.txt  HardwareRenderer.cpp
hardware-renderer/shaders/: fragmentShader_passthrough.glsl  vertexShader_passthrough.glsl
rasterizer/: CMakeLists.txt  rasterizeTriangle.cpp
raytracer/: CMakeLists.txt  RayTracer.cpp  RayTracer.hpp  RayTracerGUI.cpp  aaMethods.hpp
renderer/: BVH.cpp  BVH.hpp  CMakeLists.txt  Constants.h  Constants.hpp  Framebuffer.cpp  Framebuffer.hpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneContainer.cpp  SceneContainer.hpp  jsonSceneParser.cpp  printBVH.cpp  renderer.cpp  renderer.hpp
renderer-app/: CMakeLists.txt  renderer_app.cpp  renderer_app.hpp  renderer_gui.cpp
renderer/camera/: CMakeLists.txt  Camera.cpp  Camera.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
renderer/geometry/: BBox.cpp  BBox.hpp  Box.cpp  Box.hpp  CMakeLists.txt  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
renderer/light/: CMakeLists.txt  Light.hpp  PointLight.cpp  PointLight.hpp
renderer/math/: CMakeLists.txt  CoordSys.cpp  CoordSys.hpp  CoordinateSys.cpp  CoordinateSys.hpp  Ray.cpp  Ray.hpp  Vector3.cpp  Vector3.hpp
renderer/shader/: BlinnPhongShader.cpp  BlinnPhongShader.hpp  CMakeLists.txt  DiffuseShader.cpp  DiffuseShader.hpp  HitStruct.hpp  LambertShader.cpp  LambertShader.hpp  MirrorShader.cpp  MirrorShader.hpp  NormalShader.cpp  NormalShader.hpp  NullShader.cpp  NullShader.hpp  Shader.cpp  Shader.hpp
src/: ArgumentParsing.cpp  ArgumentParsing.h  CMakeLists.txt  Framebuffer.h  Random.cpp  Random.h  SceneDataContainer.h  Timer.cpp  Timer.h  Vector3D.cpp  Vector3D.h  XMLSceneParser.cpp  XMLSceneParser.h  handleGraphicsArgs.cpp  handleGraphicsArgs.h  jsonSceneParser.cpp  model_obj.cpp  model_obj.h
src/png++/: color.hpp  config.hpp  consumer.hpp  convert_color_space.hpp  end_info.hpp  error.hpp  ga_pixel.hpp  generator.hpp  gray_pixel.hpp  image.hpp  image_info.hpp  index_pixel.hpp  info.hpp  info_base.hpp  io_base.hpp  packed_pixel.hpp  palette.hpp  pixel_buffer.hpp  pixel_traits.hpp  png.hpp  reader.hpp  require_color_space.hpp  rgb_pixel.hpp  rgba_pixel.hpp  streaming_base.hpp  tRNS.hpp  types.hpp  writer.hpp
src/renderer/: CMakeLists.txt  Camera.cpp  Camera.hpp  CoordinateSys.cpp  CoordinateSys.hpp  Framebuffer.cpp  Framebuffer.h  Framebuffer.hpp  Light.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  PointLight.cpp  PointLight.hpp  Ray.cpp  Ray.hpp  SceneContainer.cpp  Shader.hpp  Shape.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Vector3.cpp  Vector3.h  Vector3.hpp
src/renderer/camera/: OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp
src/renderer/geometry/: CMakeLists.txt  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/renderer/light/: CMakeLists.txt  PointLight.cpp
src/renderer/math/: CoordinateSys.cpp  CoordinateSys.hpp  Vector3.hpp
src/renderer/shader/: Shader.hpp
tests/: CMakeLists.txt  test_BVH.cpp  test_BlinnPhongShading.cpp  test_Cameras.cpp  test_DefaultBox.cpp  test_DefaultSphere.cpp  test_DefaultTriangle.cpp  test_Framebuffer.cpp  test_HitBBox.cpp  test_JSONParsing.cpp  test_LambertianShading.cpp  test_Miscellaneous.cpp  test_RayDirectionColor.cpp  test_RayTraceTriangle.cpp  test_Shadows.cpp  test_SphereNormal.cpp  test_Window.cpp
utests/: CMakeLists.txt  utest_BBox.cpp  utest_Cameras.cpp  utest_Framebuffer.cpp  utest_LambertianShading.cpp  utest_Miscellaneous.cpp  utest_RayDirectionColor.cpp  utest_Vector3.cpp  utest_Vector3D.cpp
